       introducing support for Python 3.0. (SF#2441839, milian)
     * Updated documentation links for TypoScript (SF#2014276, BenBE)
     * Fixed a problem with tag and attribute names in XML highlighting (SF#2276119, BenBE)
     * Improved MySQL language file (BenBE, JavaWoman)
     * Some commentss accidentially mistaken for DocComments (SF#2454897, BenBE)
Version 1.0.8.1
  -  Added language files
     * AviSynth (Ryan Jones)
     * eMail \ mbox (Benny Baumann)
     * GNU Make (Neil Bird)
     * Oracle 11i support (Simon Redhead)
     * Prolog (Benny Baumann)
     * SciLab (Christophe David)
     * TeraTerm macro language (Boris Maisuradze)
  -  Added support for Escape Regular Expressions (BenBE)
     * Implemented C-style Escapes in PHP (BenBE)
     * Introduced support for \xAB and \007 style Char Escapes in PHP (BenBE)
     * Implemented Variable Highlighting in PHP (BenBE)
     * Implemented Variable Highlighting in Bash (milian)
  -  Fixed a problem with PCRE patterns for Keyword matching sometimes producing
     very large strings, that could not be handled by some versions of PCRE lib,
     causing broken highlighting an Regexp Compile errors (BenBE, milian)
  -  Fixed broken highlighting of bash commands like `dbus-send --dest=org.....`,
     i.e. the dest was highlighted as variable declaration (milian)
  -  Fixed broken highlighting of some symbols in their escaped form (BenBE)
     (<SEMI> and <PIPE> were accidentially filtered even though they are valid)
  -  Fixed a "memory leak" in the *_regexp_caches (milian)
  -  Fixed broken Escape chars if classes were disabled
  -  start_line_numbers_at() was ignored when GESHI_HEADER_PRE_TABLE was set (revulo)
  -  Fixed a problem allowing Remote Code Inclusion under certain circumstances (BenBE)
  -  Changes to default CSS in order to make the GESHI_HEADER_PRE_TABLE align properly,
     even on Windows / Mac systems with strange fonts (milian, revulo, ^RT)